@@ -2,6 +2,7 @@ cdebconf (0.134) UNRELEASED; urgency=low
 
   [ Jérémy Bobbio ]
   * Refactor GOBACK handling in newt_go().
+  * Refactor GOBACK handling in text_go().
 
  -- Jérémy Bobbio <lunar@debian.org>  Tue, 05 Aug 2008 14:10:24 +0000
 
